[package]
name = "dusk-pki"
version = "0.6.2"
authors = ["zer0 <matteo@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2018"

repository = "https://github.com/dusk-network/dusk-pki"
keywords = ["cryptography", "crypto", "pki", "bls12-381"]
categories =["cryptography", "cryptography::cryptocurrencies", "no-std", "wasm"]
description = "A library that holds the types and functions required to perform keys operations in Dusk"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
rand_core = "0.5"
dusk-bytes = "0.1"
subtle = {version="^2.2.1", default-features=false}
dusk-jubjub = {version="0.8", default-features=false}
dusk-poseidon = {version="0.20", default-features = false}
canonical = {version = "0.5", optional = true}
canonical_derive = {version = "0.5", optional = true}

[dev-dependencies]
rand ="0.7"
sha2 = "0.8"

[features]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-jubjub/canon"
]
