[package]
name = "dusk-pki"
version = "0.12.0"
authors = ["zer0 <matteo@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2021"

repository = "https://github.com/dusk-network/dusk-pki"
keywords = ["cryptography", "crypto", "pki", "bls12-381"]
categories =["cryptography", "cryptography::cryptocurrencies", "no-std", "wasm"]
description = "A library that holds the types and functions required to perform keys operations in Dusk"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
subtle = { version = "^2.2.1", default-features = false }
dusk-jubjub = { version = "0.13", default-features = false }
dusk-poseidon = { version = "0.31", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
sha2 = "0.8"

[features]
rkyv-impl = ["dusk-jubjub/rkyv-impl", "rkyv", "bytecheck"]
